Code Improvements
Signed-off-by: Paul Smedley <paul@smedley.id.au>